Fix text overlap for the first tab in the home screen

--- a/screen.css
+++ b/screen.css
@@ -656,7 +656,7 @@ footer {
 
 
 
-@media all and (max-width: 1150px) {
+@media all and (max-width: 1275px) {
 
 
 
